# tui-notes

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: app.rs  config.rs  encryption.rs  main.rs  note.rs  ui.rs
