[package]
name = "tui-notes"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tui-textarea = "0.6"
uuid = { version = "1.0", features = ["v4", "serde"] }
toml = "0.8"
dirs = "5.0"
chacha20poly1305 = "0.10"
argon2 = "0.5"
zeroize = "1.7"
rand = "0.8"
base64 = "0.22"
secrecy = "0.10"
rfd = "0.15"
